<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <Button
            android:id="@+id/file"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_activity_file"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/popupWindow"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_activity_popup_window"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/recycleView"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_activity_recycle_view"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/floatToolBar"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_activity_float_tool_bar"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/toolBarWithTab"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_activity_tool_bar_with_tab"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/collapsingToolbar"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_activity_collapsing_tool_bar"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/viewpage_btn"
            android:layout_gravity="center_horizontal"
            android:text="@string/viewpager"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>
